--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,15 @@ name: Run test suite
 on: push
 
 jobs:
+  build docker:
+    name: build
+      runs-on: ubuntu-latest
+      steps:
+        sudo docker build -t synobuild .
   run-tests:
-    name: Run PHPUnit tests
+    name: Run
     runs-on: ubuntu-latest
+    
     container:
       image: synobuild
       volumes:
