--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,19 @@
-name: Run test suite
+name: Compile site assets
 on: push
 
 jobs:
-  build:
-
+  compile:
+    name: Compile assets
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build -t synobuild .
-      
-  run-tests:
-    name: Run
-    runs-on: ubuntu-latest
-    
-    container:
-      image: synobuild
-      volumes:
-        - ${{ github.workspace }}:/app
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Running composer install
-        run: composer install
-      - name: Running phpunit
-        run: ./vendor/bin/phpunit te
+      - name : Buil Docker
+      - run : docker build -t synobuild .
+      - name: Run Docker container to compile assets
+        uses: addnab/docker-run-action@v3
+        with:
+          image: synobuild
+          options: -v ${{ github.workspace }}/artifacts:/result_spk  --rm --privileged --env PACKAGE_ARCH=<arch> --env DSM_VER=<dsm-ver> 
+      - name: Verify assets
+        run: ls -l dist
