--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: synobuild
-          options: -v ${{ github.workspace }}/artifacts:/result_spk  --rm --privileged --env PACKAGE_ARCH=<arch> --env DSM_VER=<dsm-ver>
+          options: -v ${{ github.workspace }}:/result_spk  --rm --privileged --env PACKAGE_ARCH=<arch> --env DSM_VER=<dsm-ver>
           run: echo
   
